--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Fantasia</title>
   </head>
   <body>
-    <canvas id="canvas" width="800" height="600">
-    </canvas>
+    <canvas id="canvas" width="800" height="600"></canvas>
+    <input type="button" id="shuffle" value="シャッフル">
   </body>
 </html>
 
